corrección carrousel - iconos

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="boot-5.0.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="js/slick/slick.css">
     <link rel="stylesheet" href="js/slick/slick-theme.css">
+    <script src="https://kit.fontawesome.com/d70ede0848.js"crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
     <title>The Venue Concierge</title>
 </head>
@@ -120,7 +121,7 @@
         </section>
         <!-- Sección Clientes -->
         <section id='clientes'>
-            <h2>CLIENTES</h2>
+            <h2>Clientes</h2>
             <div class="clientes-txt">
                 <p>Grandes empresas confiaron en nosotros.</p>
             </div>
@@ -211,9 +212,9 @@
                         </div>
                     </form>
                     <div class="datosContacto">
-                        <p><img src="media/telefono.png" width="30px">+54 9 11 2389 8884</p>
-                        <p><img src="media/email.png" width="30px">info@thevenueconcierge.com.ar </p>
-                        <p><img src="media/ubicacion.png" width="30px">Buenos Aires - Argentina</p>
+                        <p><i class="fas fa-phone-alt"></i> +54 9 11 2389 8884</p>
+                        <p><i class="fas fa-envelope"></i> info@thevenueconcierge.com.ar </p>
+                        <p><i class="fas fa-map-marker-alt"></i> Buenos Aires - Argentina</p>
 
                     </div>
                 </div>
@@ -230,12 +231,12 @@
                 <button type="submit">SUSCRIBIRME</button>
             </form>
         </div>
-        <div class="redes">
-            <h3>SEGUINOS</h3>
-            <div>
-                <a href="https://www.instagram.com/"><img src="media/instagram.png" width="40px"></a>
-                <a href="https://www.facebook.com/"><img src="media/facebook.png" width="40px"></a>
-                <a href="https://www.linkedin.com/feed/"><img src="media/linkedin.png" width="40px"></a>
+        <div class="redes-container">
+            <h3 class="redes-title">SEGUINOS</h3>
+            <div class="redes">
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram icon-redes"></i></a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square icon-redes"></i></a>
+                <a href="https://www.linkedin.com/feed/"><i class="fab fa-linkedin icon-redes"></i></a>
             </div>
         </div>
     </footer>
