--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
             <div class="container-fluid">
                 <div>
-                    <a class="navbar-brand" href="index.html"><img class="logo" src="media/logotrans.png" alt="logo"></a>
+                    <a class="navbar-brand" href="index.html"><img class="logo" src="media/logoBlanco.png" alt="logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
@@ -57,16 +57,16 @@
                 </div>
                 <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="media/slide1.png" class="d-block w-100" alt="Portada Uno">
+                    <img src="media/slide1.png" srcset="media/slideM1.png 576w, media/slide1.png" class="d-block w-100 min-vh-100" alt="Portada Uno">
                 </div>
                 <div class="carousel-item">
-                    <img src="media/slide2.png" class="d-block w-100" alt="Portada Dos">
+                    <img src="media/slide2.png" srcset="media/slideM2.png 576w, media/slide2.png" class="d-block w-100 min-vh-100" alt="Portada Dos">
                 </div>
                 <div class="carousel-item">
-                    <img src="media/slide3.png" class="d-block w-100" alt="Portada Tres">
+                    <img src="media/slide3.png" srcset="media/slideM3.png 576w, media/slide3.png" class="d-block w-100 min-vh-100" alt="Portada Tres">
                 </div>
                 <div class="carousel-item">
-                    <img src="media/slide4.png" class="d-block w-100" alt="Portada Cuatro">
+                    <img src="media/slide4.png" srcset="media/slideM4.png 576w, media/slide4.png" class="d-block w-100 min-vh-100" alt="Portada Cuatro">
                 </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
@@ -113,7 +113,7 @@
                         <img src="media/nosotros3.JPG" alt="Nosotros">
                         <div class="bg-negro">
                             <h5 class="nosotros-h5">NUESTRA MISIÓN</h5>
-                            <p class="nosotros-p">Creemos en  la curaduría confiable y en conectar a las personas con entornos y experiencias significativas. Nuestra misión es promover la felicidad y la celebración a través de la antigua tradición de la reunión y la exploración de lugares .</p>
+                            <p class="nosotros-p">Creemos en  la curaduría confiable y en conectar a las personas con entornos y experiencias significativas. Promovemos la felicidad y la celebración a través de la antigua tradición de la reunión y la exploración de lugares .</p>
                         </div>
                     </div>
                 </div>
@@ -144,11 +144,11 @@
         <section id="business">
             <h2>TVC BUSINESS</h2>
             <div class="posicionamientoBusiness">
-                <div class="col-md-6 businessTvc">
+                <div class="businessTvc">
                     <p>Hace crecer tu negocio con nuestros servicios.</p>
                     <img class="businessImg" src="media/tvcBusines.png" alt="">
                 </div>
-                <div class="col-md-6">
+                <div>
                     <div class="businnesItem">
                         <div>
                             <p class="businessNumber">01</p>
