--- a/index.html
+++ b/index.html
@@ -48,36 +48,56 @@
     <main>
         <!-- Sección Carrusel -->
         <section>
-            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                </div>
+            <div id="carouselExampleControls" class="carousel slide slider__desktop" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="media/slide1.png" srcset="media/slideM1.png 576w, media/slide1.png" class="d-block w-100 min-vh-100" alt="Portada Uno">
+                  <div class="carousel-item active">
+                    <img src="./media/slide1.png" class="d-block w-100" alt="Portada 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./media/slide2.png" class="d-block w-100" alt="Portada 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./media/slide3.png" class="d-block w-100" alt="Portada 3">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./media/slide4.png" class="d-block w-100" alt="Portada 4">
+                  </div>
                 </div>
-                <div class="carousel-item">
-                    <img src="media/slide2.png" srcset="media/slideM2.png 576w, media/slide2.png" class="d-block w-100 min-vh-100" alt="Portada Dos">
-                </div>
-                <div class="carousel-item">
-                    <img src="media/slide3.png" srcset="media/slideM3.png 576w, media/slide3.png" class="d-block w-100 min-vh-100" alt="Portada Tres">
-                </div>
-                <div class="carousel-item">
-                    <img src="media/slide4.png" srcset="media/slideM4.png 576w, media/slide4.png" class="d-block w-100 min-vh-100" alt="Portada Cuatro">
-                </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
                 </button>
-            </div>
+              </div>
+
+
+              <div id="carouselExampleControls" class="carousel slide slider__mobile" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="./media/slideM1.png" class="d-block w-100" alt="Portada 1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./media/slideM2.png" class="d-block w-100" alt="Portada 2">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./media/slideM3.png" class="d-block w-100" alt="Portada 3">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="./media/slideM4.png" class="d-block w-100" alt="Portada 4">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </section>
         <!-- Sección Nosotros -->
         <section id= "nosotros">
