--- a/index.html
+++ b/index.html
@@ -14,31 +14,29 @@
 </head>
 <body>
     <!-- Menú de navegación -->
-    <header id="header">
-        <nav class="navbar navbar-expand-lg navbar-light">
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
-                <div>
-                    <a class="navbar-brand" href="index.html"><img class="logo" src="media/logoBlanco.png" alt="logo"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                </div>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+              <a class="navbar-brand" href="index.html"><img src="media/logoBlanco2.png" alt="logo" class="logoNav"></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">HOME</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html#nosotros">NOSOTROS</a>
+                    <a class="nav-link" href="index.html#nosotros">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html#clientes">CLIENTES</a>
+                    <a class="nav-link" href="index.html#clientes">Clientes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html#business">TVC BUSINESS</a>
+                    <a class="nav-link" href="index.html#business">TVC Business</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="index.html#contacto">CONTACTO</a>
+                    <a class="nav-link" href=index.html#contacto">Contacto</a>
                   </li>
                 </ul>
               </div>
