--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="index.html#business">TVC Business</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href=index.html#contacto">Contacto</a>
+                    <a class="nav-link" href="index.html#contacto">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -72,7 +72,7 @@
               </div>
 
 
-              <div id="carouselExampleControls" class="carousel slide slider__mobile" data-bs-ride="carousel">
+              <div id="carouselExampleControlsMobile" class="carousel slide slider__mobile" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="./media/slideM1.png" class="d-block w-100" alt="Portada 1">
@@ -87,15 +87,18 @@
                     <img src="./media/slideM4.png" class="d-block w-100" alt="Portada 4">
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControlsMobile" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControlsMobile" data-bs-slide="next">
                   <span class="carousel-control-next-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
+
+
+
         </section>
         <!-- Sección Nosotros -->
         <section id= "nosotros">
