--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </button>
               </div>
 
-
+               <!-- Sección Carrusel Mobile -->
               <div id="carouselExampleControlsMobile" class="carousel slide slider__mobile" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
@@ -101,18 +101,23 @@
 
         </section>
         <!-- Sección Nosotros -->
+        <section>
+          <div class="intro-container">
+            <div class="imagenIntro-container col-md-6">
+                <img src="media/intro.JPEG" alt="Introducción" class="imagenIntro">
+            </div>
+            <div class="parrafo-intro col-md-6">
+                <h3>Servicio concierge para eventos</h3>
+                <p>Te ayudamos a encontrar el espacio perfecto para tu próximo evento, celebración, o escapada... gratis!</p>
+                <button class="botonIntro"><a href="index.html#contacto">CONTACTÁNOS</a></button>
+            </div>
+        </div>
+        </section>
+
+
+        
         <section id= "nosotros">
             <h2>NOSOTROS</h2>
-            <div class="posicionamientoNos">
-                <div class="imagen-intro">
-                    <img src="media/intro.JPEG" alt="Introducción">
-                </div>
-                <div class="parrafo-intro">
-                    <h3>Servicio concierge para eventos</h3>
-                    <p>Te ayudamos a encontrar el espacio perfecto para tu próximo evento, celebración, o escapada... gratis!</p>
-                    <button><a href="index.html#contacto">CONTACTÁNOS</a></button>
-                </div>
-            </div>
             <div class="posicionamientoNosotros">
                 <p class="nosotros-parrafo">Somos una plataforma de difusión y gestión personalizada de reservas de hoteles, restaurantes y espacios para eventos sociales y corporativos. </p>
                 <div class="bloque-Nosotros">
