corrección sección business

--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
         <section id="business">
             <h2>TVC BUSINESS</h2>
             <div class="posicionamientoBusiness">
-                <div class="businessTvc">
+                <div class="businessTvc col-md-6">
                     <p>Hace crecer tu negocio con nuestros servicios.</p>
                     <img class="businessImg" src="media/tvcBusines.png" alt="">
                 </div>
-                <div>
+                <div class="col-md-6">
                     <div class="businnesItem">
                         <div>
                             <p class="businessNumber">01</p>
