Modificaciones margenes, titulos, letras y mobile

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
         
         <section id= "nosotros">
-            <h2>NOSOTROS</h2>
+            <h2>Nosotros</h2>
             <div class="posicionamientoNosotros">
                 <p class="nosotros-parrafo">Somos una plataforma de difusión y gestión personalizada de reservas de hoteles, restaurantes y espacios para eventos sociales y corporativos. </p>
                 <div class="bloque-Nosotros">
@@ -149,7 +149,7 @@
         <section id='clientes'>
             <h2>Clientes</h2>
             <div class="clientes-txt">
-                <p>Grandes empresas confiaron en nosotros.</p>
+                <p>Grandes empresas que confiaron en nosotros.</p>
             </div>
             <div class="slider-container">
                 <div class='sliderMarcas'>
@@ -168,13 +168,13 @@
         </section>
         <!-- Sección TVC Business -->
         <section id="business">
-            <h2>TVC BUSINESS</h2>
+            <h2>TVC Business</h2>
             <div class="posicionamientoBusiness">
                 <div class="businessTvc col-md-6">
                     <p>Hace crecer tu negocio con nuestros servicios.</p>
                     <img class="businessImg" src="media/tvcBusines.png" alt="">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 bloqueBusiness">
                     <div class="businnesItem">
                         <div>
                             <p class="businessNumber">01</p>
@@ -209,7 +209,7 @@
         </section>
         <!-- Sección Contacto -->
         <section id="contacto">
-            <h2>CONTACTO</h2>
+            <h2>Contacto</h2>
             <div class="posicionamientoContacto">
                 <div class="col-md-6 contactoTitulo">
                     <p>Llamanos o envianos un mensaje y nos contactaremos a la brevedad.</p>
