corrección logos marcas y botones

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
 
         </section>
-        <!-- Sección Nosotros -->
+        
         <section>
           <div class="intro-container">
             <div class="imagenIntro-container col-md-6">
@@ -109,13 +109,11 @@
             <div class="parrafo-intro col-md-6">
                 <h3>Servicio concierge para eventos</h3>
                 <p>Te ayudamos a encontrar el espacio perfecto para tu próximo evento, celebración, o escapada... gratis!</p>
-                <button class="botonIntro"><a href="index.html#contacto">CONTACTÁNOS</a></button>
+                <a href="index.html#contacto"><input type="button" value="Contactanos" class="botonIntro"></a>
             </div>
         </div>
         </section>
-
-
-        
+        <!-- Sección Nosotros -->
         <section id= "nosotros">
             <h2>Nosotros</h2>
             <div class="posicionamientoNosotros">
@@ -153,16 +151,16 @@
             </div>
             <div class="slider-container">
                 <div class='sliderMarcas'>
-                    <div class="slideItem"><img src="./media/logo1.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo2.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo3.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo4.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo5.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo6.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo7.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo8.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo9.png" alt=""></div>
-                    <div class="slideItem"><img src="./media/logo10.png" alt=""></div>
+                    <div class="slideItem"><img src="./media/logoMarcas1.png" alt="Logo CocaCola"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas2.png" alt="Logo Visa"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas3.png" alt="Logo Accenture"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas4.png" alt="Logo Google"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas5.png" alt="Logo Ford"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas6.png" alt="Logo Shell"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas7.png" alt="Logo Adidas"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas8.png" alt="Logo Toyota"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas9.png" alt="Logo HSBC"></div>
+                    <div class="slideItem"><img src="./media/logoMarcas10.png" alt="Logo MCDonalds"></div>
                 </div>
             </div>
         </section>
@@ -234,7 +232,7 @@
                             <textarea class="form-control" id="mensaje"></textarea>
                         </div>
                         <div>
-                            <button type="submit">ENVIAR</button>
+                            <button type="submit" class="botonEnviar">ENVIAR</button>
                         </div>
                     </form>
                     <div class="datosContacto">
@@ -254,7 +252,7 @@
             <p>Para recibir todas nuestras novedades en tu bandeja de entrada</p>
             <form action="">
                 <input type="email" placeholder="email@email.com">
-                <button type="submit">SUSCRIBIRME</button>
+                <button type="submit" class="botonFooter">SUSCRIBIRME</button>
             </form>
         </div>
         <div class="redes-container">
