Cambiando tamaños y colores

--- a/index.html
+++ b/index.html
@@ -142,6 +142,35 @@
                     </div>
                 </div>
             </div>
+            <!-- <h2>Nosotros</h2>
+            <div class="posicionamientoNosotros">
+                <p class="nosotros-parrafo">Somos una plataforma de difusión y gestión personalizada de reservas de hoteles, restaurantes y espacios para eventos sociales y corporativos. </p>
+                <div class="bloque-Nosotros">
+                    <div class="nosotros-Uno">
+                        <img src="media/nosotros1.JPG" alt="Nosotros">
+                    </div>
+                    <div class="nosotros-Dos">
+                        <img src="media/nosotros2.JPG" alt="Nosotros">
+                    </div>
+                    <div class="nosotros-Tres">
+                        <img src="media/nosotros3.JPG" alt="Nosotros">
+                    </div>
+                </div>
+                <div class="acomodar-parrafoNos">
+                    <div class="bg-negro">
+                        <h5 class="nosotros-h5">¿QUÉ HACEMOS?</h5>
+                        <p class="nosotros-p">Seleccionamos constantemente venues extraordinarios para que tu evento sea una experiencia única e inolvidable. Desde un viaje de incentivo o un lanzamiento de producto hasta un bar mitzvah, cumpleaños o boda épicos.</p>
+                    </div>
+                    <div class="bg-negro">
+                        <h5 class="nosotros-h5">BENEFICIOS</h5>
+                        <p class="nosotros-p">Ahorrá tiempo y dinero delegando en nuestros concierges expertos el trabajo de contactar a los lugares que mejor se ajusten a tus requerimientos y negociar las tarifas por vos. </p>
+                    </div>
+                    <div class="bg-negro">
+                        <h5 class="nosotros-h5">NUESTRA MISIÓN</h5>
+                        <p class="nosotros-p">Creemos en  la curaduría confiable y en conectar a las personas con entornos y experiencias significativas. Promovemos la felicidad y la celebración a través de la antigua tradición de la reunión y la exploración de lugares .</p>
+                    </div>
+                </div>
+            </div> -->
         </section>
         <!-- Sección Clientes -->
         <section id='clientes'>
@@ -213,7 +242,7 @@
                     <p>Llamanos o envianos un mensaje y nos contactaremos a la brevedad.</p>
                     <img class="contactoImg" src="media/contacto.JPG" alt="">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 orden-form">
                     <form>
                         <div class="mb-3">
                             <label for="nombre" class="form-label">Nombre</label>
@@ -236,9 +265,9 @@
                         </div>
                     </form>
                     <div class="datosContacto">
-                        <p><i class="fas fa-phone-alt"></i> +54 9 11 2389 8884</p>
-                        <p><i class="fas fa-envelope"></i> info@thevenueconcierge.com.ar </p>
-                        <p><i class="fas fa-map-marker-alt"></i> Buenos Aires - Argentina</p>
+                        <p> +54 9 11 2389 8884</p>
+                        <p> info@thevenueconcierge.com.ar </p>
+                        <p> Buenos Aires - Argentina</p>
 
                     </div>
                 </div>
@@ -248,15 +277,15 @@
     <!-- Pie de Página -->
     <footer class="footer">
         <div class="suscribe">
-            <h3>SUSCRIBITE</h3>
+            <h3>Suscribite</h3>
             <p>Para recibir todas nuestras novedades en tu bandeja de entrada</p>
             <form action="">
                 <input type="email" placeholder="email@email.com">
-                <button type="submit" class="botonFooter">SUSCRIBIRME</button>
+                <button type="submit" class="botonFooter">ENVIAR</button>
             </form>
         </div>
         <div class="redes-container">
-            <h3 class="redes-title">SEGUINOS</h3>
+            <h3 class="redes-title">Seguinos</h3>
             <div class="redes">
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram icon-redes"></i></a>
                 <a href="https://www.facebook.com/"><i class="fab fa-facebook-square icon-redes"></i></a>
@@ -271,3 +300,7 @@
     <script src='js/main.js'></script>
 </body>
 </html>
+
+
+
+
